# clase-yingyan

./: .gitignore  README.md  main.py  pyproject.toml
agent-mcp/: README.md  agent-mcp.py
chat-academia/: README.md  app.py
chat-academia/datos-academia/: explicacion.txt
datos-academia/: summary.txt
downloads-mcp/: README.md  config.py  demo.py  file_organizer_server.py  install.py  mpc_chat_client.py  pyproject.toml  requirements.txt  test_client.py  test_server.py
